[tool.poetry]
name = "disk"
version = "0.1.0"
description = "DL imputation for missing skeleton data for animal behavior analysis"
authors = ["France Rose"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = "1.8.1"
numpy = "1.20.2"
pillow = "8.2.0"
matplotlib = "3.1.3"
tqdm = "4.59.0"
plotly = "5.5.0"
h5py = "3.7.0"
seaborn = "0.12.2"
scikit-image = "0.18.1"
hydra-core = "1.2.0"
pandas = "1.2.4"
scikit-learn = "0.24.1"
scipy = "1.6.2"
einops = "0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
