[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DISK"
requires-python = ">=3.9"
version = "0.1"
description = "Deep Imputation of SKeleton data"
readme = "README.md"
authors = [
    { name = "France ROSE", email = "france.rose@wanadoo.fr" }
]
dependencies = [
    "torch>=1.9.1,<1.13",
    "numpy>=1.21,<1.24",
    "matplotlib>=3.1,<3.8",
    "tqdm==4.59.0",
    "plotly==5.5.0",
    "h5py==3.7.0",
    "seaborn==0.12.2",
    "imageio>=2.3,<2.10",
    "scikit-image>=0.18.1,<0.20",
    "hydra-core==1.2.0",
    "pandas==1.4.4",
    "scikit-learn>=0.24.1",
    "scipy>=1.10,<1.13",
    "einops==0.6.1",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
dev = [
    "build"
]

[project.scripts]
DISK = "DISK.launchers.DISK_launcher:cli"
DISK-check-install = "DISK.launchers.check_install:cli"
DISK-check-gpu = "DISK.launchers.check_gpu:cli"


[project.urls]
Labpage = "https://www.normalesup.org/~frose/"
Source = "https://github.com/bozeklab/DISK"
Data = "https://doi.org/10.5281/zenodo.15828939"
Paper = "https://doi.org/10.1038/s41592-025-02893-y"
Issues = "https://github.com/bozeklab/DISK/issues"


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
DISK = [
    "conf/**/*.yaml",
]
